--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h2>2️⃣ Ethical Hacking Fundamentals</h2>
     <ul>
       <li><a href="https://wqreytuk.github.io/Patrick%2BEngebretson%2BThe%2BBasics%2Bof%2BHacking%2Band%2BPenetration%2BTesting%2C%2BSecond%2BEdition%2B%282013%29.pdf" target="_blank">The Basics of Hacking and Penetration Testing</a></li>
-      <li><a href="https://archive.org/download/ethicalhackingpe0000balo/ethicalhackingpe0000balo.pdf" target="_blank">Ethical Hacking and Penetration Testing Guide</a></li>
+      <li><a href="https://api.pageplace.de/preview/DT0400.9781482231625_A25889914/preview-9781482231625_A25889914.pdf" target="_blank">Ethical Hacking and Penetration Testing Guide</a></li>
       <li><a href="https://pages.cs.wisc.edu/~ace/media/gray-hat-hacking.pdf" target="_blank">Gray Hat Hacking</a></li>
     </ul>
   </div>
